<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@drawable/colorful">

    <TextView
        android:id="@+id/tv_welcome"
        android:textSize="40sp"
        android:text="@string/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:textColor="#99111154"

        />


    <Button
        android:id="@+id/btn_reg"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="#6A6A76"
        android:text="@string/btn_reg"
        android:textColor="#FFFF"
        android:textSize="27sp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="#6A6A76"
        android:text="@string/btn_login"
        android:textColor="#FFFF"
        android:textSize="27sp"
        />
</RelativeLayout>